--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 SECRETKEY = "1234"
-POSTGRESCONFIG = 'postgresql://postgres:1234@localhost/fundacion'
+POSTGRESCONFIG = 'sqlite:///fundacion.db'
 SECURITY_PASSWORD_SALT = 'LaP4Tr0na864-'
 SECRET_KEY = 'Am4z1nG2723'
 SECURITY_PASSWORD_SALT = 'FuNdAc10NHelp2024'
